--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,14 @@
 variables:
   MASTER_EDGE_IMAGE: $CI_REGISTRY_IMAGE/edge:master
   MASTER_EDGE_LAB4_IMAGE: $LAB4_HARBOR_REGISTRY/group-medical/harmonia/tmi-thor/fed-learning-edge:master
-  RELEASE_EDGE_IMAGE: $CI_REGISTRY_IMAGE/edge:$CI_COMMIT_TAG
+  RELEASE_EDGE_IMAGE: $CI_REGISTRY_IMAGE/edge:gpu-$CI_COMMIT_TAG
+  RELEASE_EDGE_IMAGE_CPU: $CI_REGISTRY_IMAGE/edge:cpu-$CI_COMMIT_TAG
   RELEASE_EDGE_LAB4_IMAGE: $LAB4_HARBOR_REGISTRY/group-medical/harmonia/tmi-thor/fed-learning-edge:$CI_COMMIT_TAG
   BRANCH_EDGE_IMAGE: $CI_REGISTRY_IMAGE/edge:$CI_COMMIT_REF_NAME
   BRANCH_EDGE_LAB4_IMAGE: $LAB4_HARBOR_REGISTRY/group-medical/harmonia/tmi-thor/fed-learning-edge:$CI_COMMIT_REF_NAME
   FL_EDGE_DOCKERFILE: dockerfile/Dockerfile.fl.edge
+  FV_EDGE_DOCKERFILE_GPU: dockerfile/Dockerfile.fl.edge.gpu
+  FV_EDGE_DOCKERFILE_CPU: dockerfile/Dockerfile.fl.edge.cpu
 
 services:
   - docker:dind
@@ -30,7 +33,7 @@ build-harmonia-edge-master:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
     - docker pull $MASTER_EDGE_IMAGE || true
-    - docker build --cache-from $MASTER_EDGE_IMAGE -t $MASTER_EDGE_IMAGE -f $FL_EDGE_DOCKERFILE .
+    - docker build --cache-from $MASTER_EDGE_IMAGE -t $MASTER_EDGE_IMAGE -f $FV_EDGE_DOCKERFILE_GPU .
     - docker push $MASTER_EDGE_IMAGE
   only:
     - master
@@ -49,15 +52,27 @@ push-harmonia-edge-master:
     - master
 
 
-build-harmonia-edge-tag:
+build-harmonia-edge-tag-gpu:
   stage: build
   image: docker:latest
   before_script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
     - docker pull $RELEASE_EDGE_IMAGE || true
-    - docker build --cache-from $RELEASE_EDGE_IMAGE -t $RELEASE_EDGE_IMAGE -f $FL_EDGE_DOCKERFILE .
+    - docker build --cache-from $RELEASE_EDGE_IMAGE -t $RELEASE_EDGE_IMAGE -f $FV_EDGE_DOCKERFILE_GPU .
     - docker push $RELEASE_EDGE_IMAGE
+  only:
+    - tags
+
+build-harmonia-edge-tag-cpu:
+  stage: build
+  image: docker:latest
+  before_script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+  script:
+    - docker pull $RELEASE_EDGE_IMAGE || true
+    - docker build --cache-from $RELEASE_EDGE_IMAGE -t $RELEASE_EDGE_IMAGE_CPU -f $FV_EDGE_DOCKERFILE_CPU .
+    - docker push $RELEASE_EDGE_IMAGE_CPU
   only:
     - tags
 
@@ -82,7 +97,7 @@ build-harmonia-edge-merge-request:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
     - docker pull $BRANCH_EDGE_IMAGE || true
-    - docker build --cache-from $BRANCH_EDGE_IMAGE -t $BRANCH_EDGE_IMAGE -f $FL_EDGE_DOCKERFILE .
+    - docker build --cache-from $BRANCH_EDGE_IMAGE -t $BRANCH_EDGE_IMAGE -f $FV_EDGE_DOCKERFILE_GPU .
     - docker push $BRANCH_EDGE_IMAGE
   when: manual
   only:
